fixed nav and footer spacing; compressed banner image

--- a/main.css
+++ b/main.css
@@ -26,6 +26,7 @@ nav {
     width: 100%;
     background-color: #2196f3;
     padding: 15px;
+    top: 0;
 }
 
 nav ul {
@@ -53,10 +54,11 @@ nav li a:hover {
 }
 
 header {
-    background: url("images/aqueduct-banner.jpg") no-repeat center center;
+    background: url("images/aqueduct-banner-small.jpg") no-repeat center center;
     background-size: cover;
     width: 100%;
     height: 500px;
+    margin-top: 40px;
 }
 
 header h1 {
@@ -74,6 +76,8 @@ main {
 */
 
 section {
+    display: block;
+    clear: both;
     background-color: #FFFFFF;
     padding-top: 40px;
     padding-bottom: 40px;
@@ -128,6 +132,7 @@ section.projects .project-container li {
     padding-right: 6px;
     /*    background-color: #ffc107;*/
     border: 2px solid #ffc107;
+    font-family: 'Libre Franklin', sans-serif;
 }
 
 section.projects .project-container a {
@@ -156,4 +161,6 @@ section.contact li {
 footer {
     text-align: center;
     background-color: #6ec6ff;
+    display: block;
+    clear: both;
 }
